40) kernel: net: ax25: stop using sock->sk_protinfo.<br>
41) kernel: net: kill sock->sk_protinfo.<br>
42) kernel: net: remove extranous rcu_read_lock.<br>
43) kernel: net: ip_gre: fix possible use after free.<br>
44) kernel: net: ip_gre: remove unnecessary rcu_read_lock/unlock.<br>
45) kernel: net: netfilter: don't use module_init/exit in core IPV4 code.<br>
46) kernel: net: netfilter: remove ip_queue support.<br>
47) kernel: net: netfilter: use kfree_skb() not kfree().<br>
48) kernel: net: bridge: multicast: start querier timer when running user-space stp.<br>
49) kernel: net: bridge: multicast: restore router configuration on port link down/up.<br>
50) kernel: net: bridge: fix br_stp_set_bridge_priority race conditions.<br>
51) kernel: net: bridge: skip BROUTE hook if BRIDGE_EBT_BROUTE module is not enabled.<br>
52) kernel: net: bridge: fix broken ebtables on BRIDGE_NETFILTER disabled.<br>
53) kernel: net: bridge: netfilter: optimization by exclude unused modules.<br>
54) kernel: net: bridge: group bridge code closer with netcore and netfilter (improve performance).<br>
55) kernel: net: bridge: avoid OOPS if root port not found.<br>
56) kernel: net: fix race condition in several drivers when reading stats.<br>
57) kernel: net: tcp: shrink tcp6_timewait_sock by one cache line.<br>
58) kernel: net: tcp: fix get_timewait4_sock() delay computation on 64bit.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~95%).<br>
2) need add subchannel select for 5GHz module.<br>
3) need add in wireless->basic fast roaming tune table (parametrs see in /etc/scripts/wifi_roaming.sh, only 76x2 drivers).<br>
4) need add in wireless->advanced BandSteering option if CONFIG_BAND_STEERING=y.<br>
5) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
6) need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
7) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
<br>
<br>
<br>