@@ -1075,6 +1075,7 @@
 56) kernel: net: fix race condition in several drivers when reading stats.<br>
 57) kernel: net: tcp: shrink tcp6_timewait_sock by one cache line.<br>
 58) kernel: net: tcp: fix get_timewait4_sock() delay computation on 64bit.<br>
+59) kernel: pipe: iovec: fix memory corruption when retrying atomic copy as non-atomic (CVE-2015-1805).<br>
 <br>
 <br>
 <b>TODO:</b><br>
